[package]
name = "conq-er"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
stylist = { features = ["yew_integration"] }
web-sys = { version = "0.3", features = ["HtmlElement", "CssStyleDeclaration"] }
gloo-console = "0.3.0"