[package]
name = "conq-er"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
wasm-bindgen = "0.2.91"
monaco = { git = "https://github.com/siku2/rust-monaco.git", features = ["yew-components"] }
# ^ swap this once 0.5.0 is released
stylist = { features = ["yew_integration"] }
web-sys = { version = "0.3", features = ["HtmlElement", "CssStyleDeclaration"] }
gloo = "0.11.0"
js-sys = "0.3.68"
